dark mode fixes and added email

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -130,6 +130,7 @@
 .rightLabel select {
   background-color: black;
   border: 1px solid #cccccc;
+  color: white !important;
   border-radius: 8px;
   padding: 10px;
   height: 40px;
